GNOME Bugzilla – Bug 656466
Warning if filesize limit is reached
Last modified: 2011-08-14 15:53:39 UTC
Hey guys. A warning is useful if the filesize of a picture is bigger than the maximum filesize allowed on Flickr. It's just allowed to upload pictures <20M, so if a picture reaches this size, frogr still trys to upload it and fails. So a warning before the upload might be usefull :) Cheers, Ben See: http://www.flickr.com/help/photos/#18
Good suggestion, it will be taken into account for the next release. Actually, depending on whether you are or not a PRO user the limit is different (15MBN or 20MB), but that information is already retrieved by frogr, so adding the check you suggest shouldn't be that hard. Thanks for reporting!
This problem has been fixed in the development version: http://git.gnome.org/browse/frogr/commit/?id=67e539182f4fed00ce102d3f63161226fc30772a The fix will be available in the next major software release. Thanks!