Show error if bigger than max filesize for the account (#656466).

Do not keep loading pictures if some of them is bigger than the
maximum size allowed for a given account, typically a different limit
for free and PRO accounts (15MB and 20MB at the moment).

https://bugzilla.gnome.org/show_bug.cgi?id=656466